# tg-sync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  VERIFICATION.md  docker-compose.yml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/ai/: csv_utils.rs  mock_adapter.rs  mod.rs  openai_adapter.rs
src/adapters/integrations/: mod.rs  trello.rs
src/adapters/persistence/: fs_repo.rs  mod.rs  sqlite_repo.rs  state_json.rs
src/adapters/telegram/: auth_adapter.rs  client.rs  mapper.rs  mod.rs  session.rs
src/adapters/tools/: chatpack.rs  mod.rs
src/adapters/ui/: banner.rs  mod.rs  progress.rs  tui.rs
src/domain/: entities.rs  errors.rs  mod.rs
src/ports/: inbound.rs  mod.rs  outbound.rs  task_tracker.rs
src/shared/: config.rs
src/usecases/: analysis_service.rs  auth_service.rs  media_worker.rs  mod.rs  sync_service.rs  watcher_service.rs
